loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:5: error: value &&! is not a member of Boolean
    if(isOverBaggle()&&!crossing()){
                     ^